# open_jtalk-rs

./: Cargo.toml  LICENCE  README.md
.cargo/: config.toml
.github/: pinact.yaml
.github/actions/auto_gen_bind_pr/: action.yml
.github/workflows/: audit.yml  gen_bind.yml  pinact.yml  test.yml
crates/open_jtalk/: Cargo.toml
crates/open_jtalk-sys/: Cargo.toml  build.rs
crates/open_jtalk-sys/open_jtalk/: CMakeLists.txt
crates/open_jtalk/src/: jpcommon.rs  lib.rs  mecab.rs  njd.rs  resource.rs  text2mecab.rs  win_api_helper.rs
crates/open_jtalk/src/mecab/: mecab_dict_index.rs  mod.rs
crates/openjtalk/: Cargo.toml
crates/openjtalk-sys/: Cargo.toml  build.rs  wrapper.hpp
crates/openjtalk-sys/openjtalk/: CMakeLists.txt
crates/openjtalk/src/: lib.rs  mecab.rs
