[package]
name = "open_jtalk"
version = "0.1.25"
edition = "2021"

[dependencies]
open_jtalk-sys = { path = "../open_jtalk-sys", version = "0.15.111" }
thiserror = "1.0.31"

[target.'cfg(target_os = "windows")'.dependencies]
local-encoding = "0.2.0"
windows = { version = "0.39.0", features = ["Win32_Globalization"] }

[dev-dependencies]
rstest = "0.12.0"
pretty_assertions = "1.2.1"
