[package]
name = "open_jtalk"
version = "0.1.25"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
camino = "1.1.6"
itertools = "0.14.0"
libc = "0.2.176"
open_jtalk-sys = { path = "../open_jtalk-sys", version = "0.16.111" }
thiserror = "1.0.31"

[dev-dependencies]
rstest = "0.12.0"
pretty_assertions = "1.2.1"
